--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -7,21 +7,21 @@
         <p class="ma-0 mt-8 text-center">${{product.price}}</p>
       </div>
       <div class="card-actions justify-content-center pa-4">
-        <button class="x-small outlined" data-test-id="btn-item-add">
+        <button class="x-small outlined" data-test-id="btn-item-add" (click)="addToCart(product)" *ngIf="product.cartQuantity == 0">
           Add To Cart
         </button>
 
-        <div class="layout-row justify-content-between align-items-center">
+        <div class="layout-row justify-content-between align-items-center" *ngIf="product.cartQuantity > 0">
           <button class="x-small icon-only outlined"
-                  data-test-id="btn-quantity-subtract">
+                  data-test-id="btn-quantity-subtract"  (click)="updateCart(product,UpdateMode.SUBTRACT)">
             <i class="material-icons">remove</i>
           </button>
 
-          <input type="number" class="cart-quantity" data-test-id="cart-quantity"/>
+          <input type="number" class="cart-quantity" data-test-id="cart-quantity" value="{{product.cartQuantity}}"/>
 
           <button class="x-small icon-only outlined"
-                  data-test-id="btn-quantity-add">
-            <i class="material-icons">add</i>
+                  data-test-id="btn-quantity-add" (click)="updateCart(product,UpdateMode.ADD)">
+            <i class="material-icons" >add</i>
           </button>
         </div>
       </div>
